# bunadmin

./: .gitignore  README.md  manage.py  pyproject.toml
bunadmin/: asgi.py  settings.py  urls.py  wsgi.py
dashboard/: context_processors.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
jstoolchain/: package-lock.json  package.json  tailwind.config.js
locale/de/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
locale/it/LC_MESSAGES/: django.po
static/js/libs/: stimulus.js:Zone.Identifier  stimulus.umd.min.js
templates/: base-nonav.html  base.html
templates/partials/: footer.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_active_address_profile_and_more.py
users/templates/users/: login.html
